--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
             </li>
           <% } else { %>
             <li class="nav-item">
-              <a class="nav-link active" href="/logout">Logged in as <%= currentUser.username %></a>
+              <a class="nav-link active" href="#">Logged in as <%= currentUser.username %></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
